cmake_minimum_required(VERSION 2.6)

PROJECT(SuperPixelSegmentation)

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/GraphCut)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/SLIC)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/QuickShift)

# Where to copy executables when 'mak